# kafka-cpp-example

./: .gitignore  README.md  meson.build
src/: consumer.cc  kafka.cc  kafka.hh  producer.cc
